# agentralabs-tech

./: .gitignore  CLAUDE.md  Cargo.toml  DOCS-WEB-UPDATE-PUBLIC-SAFE.md  README.md  install_all.sh  local_ai_test.sh  sync_artifacts.sh
.github/workflows/: agentra-cli-ci.yml  canonical-consistency.yml
agentic-cognition/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md
agentic-cognition/.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  release.yml  runtime-hardening-guardrails.yml
agentic-cognition/bindings/python/: setup.py
agentic-cognition/bindings/python/agentic_cognition/: __init__.py  cognition.py
agentic-cognition/crates/agentic-cognition/: Cargo.toml
agentic-cognition/crates/agentic-cognition-cli/: Cargo.toml
agentic-cognition/crates/agentic-cognition-cli/src/: main.rs
agentic-cognition/crates/agentic-cognition-ffi/: Cargo.toml  cbindgen.toml
agentic-cognition/crates/agentic-cognition-ffi/src/: lib.rs
agentic-cognition/crates/agentic-cognition-mcp/: Cargo.toml
agentic-cognition/crates/agentic-cognition-mcp/src/: ghost_bridge.rs  lib.rs  main.rs
agentic-cognition/crates/agentic-cognition-mcp/src/protocol/: mod.rs
agentic-cognition/crates/agentic-cognition-mcp/src/tools/: mod.rs  registry.rs
agentic-cognition/crates/agentic-cognition-mcp/src/types/: mod.rs
agentic-cognition/crates/agentic-cognition-mcp/tests/: edge_cases_inventions.rs  mcp_tool_count.rs
agentic-cognition/crates/agentic-cognition/benches/: cognition_benchmarks.rs
agentic-cognition/crates/agentic-cognition/src/: contracts.rs  lib.rs
agentic-cognition/crates/agentic-cognition/src/audit/: mod.rs
agentic-cognition/crates/agentic-cognition/src/bridges/: config.rs  ghost.rs  hydra.rs  mod.rs  noop.rs
agentic-cognition/crates/agentic-cognition/src/engine/: index.rs  mod.rs  query.rs  store.rs  validation.rs  write.rs
agentic-cognition/crates/agentic-cognition/src/format/: mod.rs
agentic-cognition/crates/agentic-cognition/src/inventions/: belief_physics.rs  drift_tracker.rs  future_projection.rs  living_model.rs  mod.rs  preference_oracle.rs  shadow.rs  simulation.rs  soul_reflection.rs
agentic-cognition/crates/agentic-cognition/src/storage/: atomic.rs  isolation.rs  mod.rs
agentic-cognition/crates/agentic-cognition/src/types/: belief.rs  bias.rs  consciousness.rs  drift.rs  error.rs  ids.rs  mod.rs  model.rs  patterns.rs  prediction.rs  self_concept.rs  shadow.rs  soul.rs
agentic-cognition/crates/agentic-cognition/src/validation/: mod.rs
agentic-cognition/crates/agentic-cognition/tests/: phase1_types.rs  phase2_engine.rs  phase3_inventions.rs  phase4_mcp.rs  phase5_format.rs  phase6_integration.rs  stress_edge_tests.rs
agentic-cognition/docs/: API.md  ARCHITECTURE.md  CLI.md  CONCEPTS.md  EXAMPLES.md  FAQ.md  INVENTIONS.md  MCP-TOOLS.md  PRIVACY.md  QUICKSTART.md  SISTER-INTEGRATION.md  TROUBLESHOOTING.md
agentic-cognition/docs/public/: api-reference.md  benchmarks.md  command-surface.md  concepts.md  experience-with-vs-without.md  faq.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json
agentic-cognition/examples/: basic_usage.rs  belief_physics.rs  mcp_integration.rs  prediction.rs
agentic-cognition/npm/wasm/: Cargo.toml
agentic-cognition/npm/wasm/src/: lib.rs
agentic-cognition/paper/paper-i-user-modeling/: main.aux  main.out  main.tex  references.bib
agentic-cognition/python/: pyproject.toml
agentic-cognition/scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  release.sh  test-primary-problems.sh
agentic-cognition/tests/bridge/: Cargo.toml
agentic-cognition/tests/bridge/src/: lib.rs
agentic-contracts/: Cargo.toml  README.md
agentic-contracts/docs/: SISTER-COMPLIANCE-VERIFICATION.md
agentic-contracts/src/: context.rs  errors.rs  events.rs  file_format.rs  grounding.rs  lib.rs  query.rs  receipts.rs  sister.rs  types.rs
agentra-cli/: Cargo.toml  README.md
agentra-cli/src/: main.rs
agentra-cli/tests/fixtures/mcp/: claude_desktop.json  cursor.json  vscode_cline.json
codebase-improvement/: AGENTIC-CODEBASE-12-INVENTIONS.md  AGENTIC-CODEBASE-17-INVENTIONS.md
docs/: AGENTICREVOLUTION-COMPLETE-ARCHITECTURE.md  MCP-QUALITY-STANDARD.md  NEW-SISTER-PLAYBOOK.md  agentic-sisters-implementation-report-2026-02-22.md  agentra-runtime-operations-update.md  feedback-and-community.md  glossary.md  how-to.md  mcp-consolidation-contract.json  new-sister-checklist.md  operational-depth-parity.md  server-runtime-auth-artifact-sync.md  sisters-registry.json  system-architecture.md  use-case-playbooks.md
docs/advertising-video/: package-lock.json  package.json  tsconfig.json
docs/flyers/: preview.html
goals/: README.md
goals/hydra/: HYDRA-ARCHITECTURE-FEEDBACK V2 Openclaw.md  HYDRA-ARCHITECTURE-FEEDBACK.md  HYDRA-COMPLETE-SPEC.md  HYDRA-INVENTIONS.md  HYDRA-SKILL-ECOSYSTEMS.md  HYDRA-UX-SPEC.md  HydraMail.md  HydraPhilosophy.md  MOREOFHYDRA.md  RESOURCE-OPTIMIZATION-SPEC.md  SKILL-FABRIC-SPEC.md  UIUX-minset.md
goals/new-sisters/: ASTRAL-MISSING-SISTERS.md  SISTER-V2-PATTERNS.md  SISTER-V2-PLANNED-PRE-PHILIP.md
goals/validation/: EDGE-CASE-HANDLERS-SPEC.md  MCP-TOOL-STANDARDS.md  SISTER-HYDRA-INTEGRATION-CONTRACT.md
goals/vision/: VISION-AMEM-20-YEAR-ROADMAP.md
memory-improvement/: MEMORY-V3-IMMORTAL-IMPLEMENTATION (4).md  MEMORY-V3-IMMORTAL-IMPLEMENTATION (5).md  MEMORY-V3-IMMORTAL-IMPLEMENTATION.md
scripts/: check-canonical-consistency.sh  check-command-surface.sh  check-mcp-consolidation.sh  check-operational-depth-parity.sh  install-mcp-servers.sh  install-services.sh  release.sh
scripts/lib/: load-sisters.sh
solidification/: CLAUDE-CODE-SOLIDIFICATION-INSTRUCTIONS.md  PRE-HYDRA-CONVERGENCE-AUDIT.md  TOKEN-CONSERVATION-ARCHITECTURE.md
vision-improvement/: AGENTIC-VISION-16-INVENTIONS.md
(+34 files in other folders)
