[workspace]
resolver = "2"
members = [
    "crates/agentic-cognition",
    "crates/agentic-cognition-mcp",
    "crates/agentic-cognition-cli",
    "crates/agentic-cognition-ffi",
    "tests/bridge",
]
exclude = [
    "npm/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-cognition"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tempfile = "3"
thiserror = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
blake3 = "1.5"
clap = { version = "4", features = ["derive"] }

# SDK
agentic-sdk = { version = "0.2.0", path = "../agentic-sdk" }

# Internal crates
agentic-cognition = { path = "crates/agentic-cognition" }
agentic-cognition-mcp = { path = "crates/agentic-cognition-mcp" }
agentic-cognition-cli = { path = "crates/agentic-cognition-cli" }
agentic-cognition-ffi = { path = "crates/agentic-cognition-ffi" }
