[package]
name = "agentra-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Orchestrator CLI for Agentra sister projects"
repository = "https://github.com/agentralabs/agentralabs-tech"
homepage = "https://github.com/agentralabs/agentralabs-tech"
documentation = "https://github.com/agentralabs/agentralabs-tech/tree/main/agentra-cli"
readme = "README.md"

[[bin]]
name = "agentra"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
