[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agentic-cognition"
version = "0.1.0"
description = "Longitudinal user modeling for AI agents"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Agentra Labs", email = "contact@agentralabs.tech"}]

[tool.maturin]
features = ["pyo3/extension-module"]
