[package]
name = "agentic-cognition-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for AgenticCognition — 28+ commands for user model management"

[[bin]]
name = "acog"
path = "src/main.rs"

[dependencies]
agentic-cognition = { workspace = true }
agentic-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tempfile = { workspace = true }
