[package]
name = "agentic-cognition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Longitudinal user modeling — living models of human consciousness for AI agents"
keywords = ["ai", "agent", "cognition", "llm", "psychology"]
categories = ["data-structures", "command-line-utilities"]

[lib]
name = "agentic_cognition"
path = "src/lib.rs"

[features]
default = ["format"]
format = []
ffi = ["format"]

[dependencies]
agentic-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
petgraph = "0.6"
statrs = "0.17"
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cognition_benchmarks"
harness = false
